# Numerical-Computations-Assignments

1/: HW.tex
1/commons/: course.sty
Classwork1/: HW.tex
Classwork1/commons/: course.sty
P1/: chebyshev.py  interpolation.py  taylor.py
P2/: Degree.py  Integral.py  MonteCarlo.py
P3/: TheLastofUs.ipynb
P4/: Gauss_Siedel.ipynb  Gradinet descent.ipynb  Q1.py  Q2.py
P5/: CMakeLists.txt  main.cu  q1.cu  q1.cuh  q2.cu  q2.cuh  q3.cu  q3.cuh  q4.cu  q4.cuh  util.cu  util.cuh
T1/: HW.tex
T1/commons/: course.sty
T2/: HW.tex
T2/codes/: 2.py  3-1.py  3-2.py
T2/commons/: course.sty
T3/: HW.tex
T3/commons/: course.sty
T4/: HW.tex
T4/codes/: Bashforth.py  Heun.py  Runge-Kutta (Order Four).py
T4/commons/: course.sty
T5/: HW.tex
T5/codes/: 1.py  2.py  3.py  4.py
T5/commons/: course.sty
T6/: HW.tex
T6/codes/: 4.py  5.py
T6/commons/: course.sty
